cleaned bar list a lil, and fixed searchbox on safari

--- a/src/Stylizers/searchbox.css
+++ b/src/Stylizers/searchbox.css
@@ -1,23 +1,49 @@
-input[type=search]{
-    -moz-appearance: none;/* older firefox */
-    -webkit-appearance: none; /* safari, chrome, edge and ie mobile */
-    appearance: none; /* rest */
-    height: 30px;
-    width: 300px;
-    border-radius: 15px;
-    color: #2a3d8c;
-    text-align: center;
-    font-size: 1.2rem;
-    font-weight: bold;
-    font-family: 'Cairo', sans-serif;
- }
+input[type="search"] {
+  -moz-appearance: none; /* older firefox */
+  -webkit-appearance: none; /* safari, chrome, edge and ie mobile */
+  appearance: none; /* rest */
+  height: 30px;
+  width: 300px;
+  border-radius: 15px;
+  color: #2a3d8c;
+  text-align: center;
+  font-size: 1.2rem;
+  font-weight: bold;
+  font-family: "Cairo", sans-serif;
+}
 
- input[type=search]::placeholder {
-    text-align: center;
-    font-family: 'Cairo', sans-serif;
-    font-size: 1.2rem;
- }
+input[type="search"]::placeholder {
+  text-align: center;
+  font-family: "Cairo", sans-serif;
+  font-size: 1.2rem;
+}
 
- input[type=search]:focus {
-     outline: 0;
- }
+input[type="search"]:focus {
+  outline: 0;
+}
+
+/* media queries  */
+
+@media screen and (max-width: 700px) {
+    input[type="search"] {
+        font-size: 1rem;
+        height: 35px;
+    }
+
+    input[type="search"]::placeholder {
+        font-size: 0.5rem;
+    }
+}
+
+@media not all and (min-resolution: 0.001dpcm) {
+  @media {
+    input[type="search"]::placeholder {
+      font-size: 1.2rem;
+    }
+
+    input[type="search"] {
+      height: 35px;
+      line-height: 35px;
+    }
+  }
+}
